<resources>
    <string name="app_name">Engage</string>
    <string name="welcome_to_engage">Engage</string>
    <string name="tagline">Better way to socialize</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_engage">Login to Engage</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up_with_engage">Sign Up with Engage</string>
    <string name="one_last_step">One Last Step</string>
    <string name="name">Your Name</string>
    <string name="username">Username</string>
    <string name="verifying_your_email_address">Verifying your Email Address</string>
    <string name="chats">Chats</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="people">People</string>
    <string name="conversations">Conversations</string>
    <string name="suggested">Suggested</string>
    <string name="addcontacts">Add Contacts</string>
    <string name="display_picture">Display Picture</string>
    <string name="bio">Bio</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends">Friends</string>
    <string name="sent">Sent</string>
    <string name="FR_received_msg">%1$s (%2$s) sent you a friend request</string>
    <string name="FR_accepted_msg">%1$s (%2$s) accepted your friend request</string>
    <string name="accept">Accept</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_participants_initial_text">Search, select and add participants for a new group</string>
    <string name="search_for_friends">Search for friends...</string>
    <string name="set_name">Set Name</string>
    <string name="group_name">Group Name</string>
    <string name="reminder">Reminder</string>
    <string name="poll">Poll</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_description">Reminder description</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="type_message_here">Type message here...</string>
    <string name="search_here">Search here...</string>
</resources>
