<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".ui.setup.screens.ChooseMethodFragment">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#fff"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_to_engage"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="#003863"/>

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/tagline"
            android:textSize="22dp"
            android:textColor="#000"/>

    <Button
        android:id="@+id/login_button"
        style="@style/SubmitButton"
        android:layout_marginBottom="15dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/signup_button"
        style="@style/SubmitButton"
        android:text="@string/sign_up" />
    </LinearLayout>
</LinearLayout>