<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Proceed With your"
            android:textSize="22dp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="#000"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/OuterEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                style="@style/EditText"
                android:hint="@string/email_id"

                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/OuterEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                style="@style/EditText"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_up_button"
            style="@style/SubmitButton"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/noteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</LinearLayout>

