<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.core.widget.ContentLoadingProgressBar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center"
        tools:context=".ui.setup.screens.setusername.SetUsernameFragment">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="30dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_mail_profile_picture_male"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <ImageButton
                    android:id="@+id/change_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00FFFFFF"
                    android:src="@drawable/ic_change_profile" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/OuterEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    style="@style/EditText"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/OuterEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    style="@style/EditText"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirm_button"
                style="@style/SubmitButton"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/noteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>