<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_nav_graph"
    app:startDestination="@id/splashScreen">

    <fragment
        android:id="@+id/chatListFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.chatlist.ChatListFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_chatListFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_chatListFragment_to_addParticipantsFragment"
            app:destination="@id/addParticipantNavGraph" />
    </fragment>
    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_profileActivity"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_searchFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.people.PeopleFragment"
        android:label="people_fragment"
        tools:layout="@layout/fragment_people" >
        <action
            android:id="@+id/action_peopleFragment_to_testFragment"
            app:destination="@id/testFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.profile.ProfileFragment"
        android:label="activity_profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
        <action
            android:id="@+id/action_profileActivity_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.test.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.abhishekjagushte.engage.ui.chat.screens.chat.ChatFragment"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="conversationID"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_imagePreviewFragment"
            app:destination="@id/imagePreviewFragment" />
        <action
            android:id="@+id/action_chatFragment_to_createReminderDialog"
            app:destination="@id/createReminderDialog" />
        <action
            android:id="@+id/action_chatFragment_to_imageViewFragment"
            app:destination="@id/imageViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/splashScreen"
        android:name="com.abhishekjagushte.engage.ui.SplashScreenFragment"
        android:label="SplashScreen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreen_to_chatListFragment"
            app:destination="@id/chatListFragment"
            app:popUpTo="@id/splashScreen"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashScreen_to_setup_activity_nav_graph"
            app:destination="@id/setup_activity_nav_graph" />
    </fragment>


    <navigation
        android:id="@+id/setup_activity_nav_graph"
        app:startDestination="@id/chooseMethodFragment">

        <fragment
            android:id="@+id/chooseMethodFragment"
            android:name="com.abhishekjagushte.engage.ui.setup.screens.ChooseMethodFragment"
            android:label="choose_method_fragment"
            tools:layout="@layout/fragment_choose_method" >
            <action
                android:id="@+id/action_chooseMethodFragment_to_loginFragment"
                app:destination="@id/loginFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" />
            <action
                android:id="@+id/action_chooseMethodFragment_to_signUpFragment"
                app:destination="@id/signUpFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" />
        </fragment>
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.abhishekjagushte.engage.ui.setup.screens.login.LoginFragment"
            android:label="login_fragment"
            tools:layout="@layout/fragment_login" />
        <fragment
            android:id="@+id/signUpFragment"
            android:name="com.abhishekjagushte.engage.ui.setup.screens.signup.SignUpFragment"
            android:label="sign_up_fragment"
            tools:layout="@layout/fragment_sign_up" >
            <action
                android:id="@+id/action_signUpFragment_to_setUsernameFragment"
                app:destination="@id/setUsernameFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" />
        </fragment>
        <fragment
            android:id="@+id/setUsernameFragment"
            android:name="com.abhishekjagushte.engage.ui.setup.screens.setusername.SetUsernameFragment"
            android:label="set_username_fragment"
            tools:layout="@layout/fragment_set_username" >
            <argument
                android:name="email"
                app:argType="string" />
            <argument
                android:name="password"
                app:argType="string" />
            <action
                android:id="@+id/action_setUsernameFragment_to_bottomSheet"
                app:destination="@id/bottomSheet" />
        </fragment>

        <action
            android:id="@+id/action_global_chatListFragment"
            app:destination="@id/chatListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popUpTo="@id/splashScreen"
            app:popUpToInclusive="true" />

        <dialog
            android:id="@+id/bottomSheet"
            android:name="com.abhishekjagushte.engage.ui.fragments.BottomSheet"
            android:label="fragment_bottom_sheet"
            tools:layout="@layout/fragment_bottom_sheet" >
            <action
                android:id="@+id/action_bottomSheet_to_setUsernameFragment"
                app:destination="@id/setUsernameFragment" />
        </dialog>

    </navigation>

    <navigation android:id="@+id/addParticipantNavGraph"
        app:startDestination="@id/addParticipantsFragment">
        <fragment
            android:id="@+id/setGroupInfoFragment"
            android:name="com.abhishekjagushte.engage.ui.main.screens.creategroup.setinfo.SetGroupInfoFragment"
            android:label="fragment_set_group_info"
            tools:layout="@layout/fragment_set_group_info" />
        <fragment
            android:id="@+id/addParticipantsFragment"
            android:name="com.abhishekjagushte.engage.ui.main.screens.creategroup.addparticipants.AddParticipantsFragment"
            android:label="@string/add_participants"
            tools:layout="@layout/fragment_add_participants" >
            <action
                android:id="@+id/action_addParticipantsFragment_to_setGroupInfoFragment"
                app:destination="@id/setGroupInfoFragment" />
        </fragment>
        <action
            android:id="@+id/action_global_chatFragment"
            app:destination="@id/chatFragment"
            app:popUpTo="@id/chatListFragment" />
    </navigation>
    <fragment
        android:id="@+id/imagePreviewFragment"
        android:name="com.abhishekjagushte.engage.ui.chat.screens.chat.fragments.chatscreen.features.attachment.images.ImagePreviewFragment"
        android:label="fragment_image_preview"
        tools:layout="@layout/fragment_image_preview" />
    <dialog
        android:id="@+id/createReminderDialog"
        android:name="com.abhishekjagushte.engage.ui.chat.screens.events.createscreens.CreateReminderDialog"
        android:label="fragment_create_reminder_dialog"
        tools:layout="@layout/fragment_create_reminder_dialog" >
        <argument
            android:name="conversationType"
            app:argType="integer" />
        <argument
            android:name="conversationID"
            app:argType="string"
            app:nullable="true" />
    </dialog>
    <fragment
        android:id="@+id/imageViewFragment"
        android:name="com.abhishekjagushte.engage.ui.fragments.ImageViewFragment"
        android:label="fragment_image_view"
        tools:layout="@layout/fragment_image_view" >
        <argument
            android:name="chatName"
            app:argType="string" />
        <argument
            android:name="imageUri"
            app:argType="string" />
        <argument
            android:name="messageTime"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.abhishekjagushte.engage.ui.main.screens.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" /><action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment"/>

    <dialog
        android:id="@+id/bottomSheet2"
        android:name="com.abhishekjagushte.engage.ui.fragments.BottomSheet"
        android:label="fragment_bottom_sheet"
        tools:layout="@layout/fragment_bottom_sheet" /><action android:id="@+id/action_global_bottomSheet2" app:destination="@id/bottomSheet2"/>

</navigation>